# camera

./: .gitignore  DIFF  README.md  camera.py  pyproject.toml  requirements.txt  scan.py  tapoC500.py
pytapo/: __init__.py
